lonlat delta and turn lcm

--- a/Assembly-CSharp-firstpass.csproj
+++ b/Assembly-CSharp-firstpass.csproj
@@ -39,28 +39,30 @@
      <Compile Include="Assets\Plugins\LCM\MBARI Types\bounding_box_list_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\bounding_box_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\camera_cfg_t.cs" />
+     <Compile Include="Assets\Plugins\LCM\MBARI Types\clump_status_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\controller_status_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\cvt_status_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\dspl_cfg_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\ext_target_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\filter_status_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\gain_scale_status_t.cs" />
-     <Compile Include="Assets\Plugins\LCM\MBARI Types\geolocation_t.cs" />
+     <Compile Include="Assets\Plugins\LCM\MBARI Types\gps_status_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\header_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\image_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\mini_rov_attitude_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\mini_rov_depth_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\mini_rov_rowe_dvl_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\mini_rov_status_t.cs" />
-     <Compile Include="Assets\Plugins\LCM\MBARI Types\mini_rov_turns_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\ml_cfg_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\mwt_control_status_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\mwt_status_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\mwt_target_t.cs" />
+     <Compile Include="Assets\Plugins\LCM\MBARI Types\position_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\stereo_bounding_box_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\stereo_image_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\string_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\trajectory_status_t.cs" />
+     <Compile Include="Assets\Plugins\LCM\MBARI Types\turns_t.cs" />
      <Compile Include="Assets\Plugins\LCM\MBARI Types\vehicle_cmd_t.cs" />
      <Compile Include="Assets\Plugins\LeapMotion\Core\Examples\Example Assets\InertiaPostProcessProvider.cs" />
      <Compile Include="Assets\Plugins\LeapMotion\Core\Examples\Example Assets\ProjectionPostProcessProvider.cs" />
