Integrate drag windows

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -107,14 +107,18 @@
     <Compile Include="Assets\CurvedUI\Scripts\OptionalDependencyAttribute.cs" />
     <Compile Include="Assets\ProjectVirtualCamera.cs" />
     <Compile Include="Assets\Scripts\AttitudeOverlayController.cs" />
+    <Compile Include="Assets\Scripts\ButtonTransitioner.cs" />
     <Compile Include="Assets\Scripts\ClumpOverlay.cs" />
+    <Compile Include="Assets\Scripts\CustomHandSwitcher.cs" />
     <Compile Include="Assets\Scripts\DeltaOverlayController.cs" />
     <Compile Include="Assets\Scripts\DepthOverlayController.cs" />
     <Compile Include="Assets\Scripts\DragWindow.cs" />
+    <Compile Include="Assets\Scripts\DragWindowCUI.cs" />
     <Compile Include="Assets\Scripts\FakeLCMPublisher.cs" />
     <Compile Include="Assets\Scripts\GeolocationController.cs" />
     <Compile Include="Assets\Scripts\HeadingOverlayController.cs" />
     <Compile Include="Assets\Scripts\LCMListener.cs" />
+    <Compile Include="Assets\Scripts\LeapMotionCustomController.cs" />
     <Compile Include="Assets\Scripts\MenuAppearScript.cs" />
     <Compile Include="Assets\Scripts\Pointer.cs" />
     <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
