--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -119,6 +119,7 @@
      <Compile Include="Assets\Scripts\SettingsManager.cs" />
      <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
      <Compile Include="Assets\Scripts\TurnOverlayController.cs" />
+     <Compile Include="Assets\Scripts\TurnsTake2.cs" />
      <Compile Include="Assets\Scripts\VRInputModule.cs" />
      <Compile Include="Assets\Scripts\WebCam.cs" />
      <Compile Include="Assets\Sketchfab For Unity\Scripts\AssetBrowser\SketchfabBrowserManager.cs" />
